; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_hda.c_pci_hda_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_hda.c_pci_hda_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmctx = type { i32 }
%struct.pci_devinst = type { %struct.hda_softc* }
%struct.hda_softc = type { i32 }

@.str = private unnamed_addr constant [28 x i8] c"offset: 0x%lx value: 0x%lx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vmctx*, i32, %struct.pci_devinst*, i32, i32, i32)* @pci_hda_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_hda_read(%struct.vmctx* %0, i32 %1, %struct.pci_devinst* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.vmctx*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.pci_devinst*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.hda_softc*, align 8
  %14 = alloca i32, align 4
  store %struct.vmctx* %0, %struct.vmctx** %7, align 8
  store i32 %1, i32* %8, align 4
  store %struct.pci_devinst* %2, %struct.pci_devinst** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load %struct.pci_devinst*, %struct.pci_devinst** %9, align 8
  %16 = getelementptr inbounds %struct.pci_devinst, %struct.pci_devinst* %15, i32 0, i32 0
  %17 = load %struct.hda_softc*, %struct.hda_softc** %16, align 8
  store %struct.hda_softc* %17, %struct.hda_softc** %13, align 8
  store i32 0, i32* %14, align 4
  %18 = load %struct.hda_softc*, %struct.hda_softc** %13, align 8
  %19 = ptrtoint %struct.hda_softc* %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = load i32, i32* %10, align 4
  %22 = icmp eq i32 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i32, i32* %12, align 4
  %26 = icmp sle i32 %25, 4
  %27 = zext i1 %26 to i32
  %28 = call i32 @assert(i32 %27)
  %29 = load %struct.hda_softc*, %struct.hda_softc** %13, align 8
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @hda_read(%struct.hda_softc* %29, i32 %30)
  store i32 %31, i32* %14, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load i32, i32* %14, align 4
  %34 = call i32 @DPRINTF(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %32, i32 %33)
  %35 = load i32, i32* %14, align 4
  ret i32 %35
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @hda_read(%struct.hda_softc*, i32) #1

declare dso_local i32 @DPRINTF(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
